添加了主题设置，实现了暗亮切换

--- a/ui/styles/main.qss
+++ b/ui/styles/main.qss
@@ -1,5 +1,5 @@
 /* BiliMusicPlayer 主样式表*/
-
+/* 已废弃，现在在theme里写dark.qss和light.qss 等主题 */
 /* 全局样式 */
 * {
     font-family: "Microsoft YaHei", "PingFang SC", "Helvetica Neue", Arial, sans-serif;
